@@ -4,5 +4,7 @@
 1)Add two columns: user_last_location and time_last_seen_at_location to the mysql database
 https://developers.google.com/maps/documentation/geocoding/web-service-best-practices#BuildingURLs
 https://developers.google.com/maps/documentation/geocoding/intro
-2) Insert default values into location table as soon as the user signs up so that user is remains in the table
-3) Add button to chatpage from where we can get another user's location. This button will call find_user_location.php and pass user_id as post parameter
+
+22/4/17:
+1) Insert default values into location table as soon as the user signs up so that user is remains in the table
+2) Add button to chatpage from where we can get another user's location. This button will call find_user_location.php and pass user_id as post parameter
